# wi22

./: Makefile  README.md  assignments.md  calendar.md  contact.md  grades.md  index.md  lectures.md  links.md  site.hs  stack.yaml
discussions/: final-review.md
docs/: assignments.html  calendar.html  contact.html  grades.html  index.html  lectures.html  links.html  pin
docs/discussions/: final-review.html
docs/lectures/: 00-hello.html  01-lambda-notes.html  01-lambda.html  02-haskell-old.html  02-haskell-rec.html  02-haskell.html  03-datatypes.html  04-hof.html  05-closure.html  05-environments.html  06-parsing.html  07-classes.html  07-types.html  08-monads.html  08-prolog.html  09-io.html  info_ocaml.html  info_prolog.html  partial-solutions.html  piazza.html  prolog.html
docs/static/arith/: 06-parsing.md  README.md
docs/static/code/: 02-haskell.md  03-datatypes.md  04-hof.md  05-closure.md  05-environments.md  07-classes.md  08-monads.md  cse130-code.cabal  foo  hie.yaml  (+1 more)
lectures/: 00-hello.md  01-lambda.md  02-haskell-rec.md  02-haskell.md  03-datatypes.md  04-hof.md  05-environments.md  06-parsing.md  07-classes.md  07-types.md  08-monads.md  08-prolog.md  09-io.md
static/arith/: arith.cabal  stack.yaml  stack.yaml.orig
static/arith/src/: Main.hs
static/arith/src/Language/Arith/: Eval.hs  Lexer.x  Parser.y  Parser1.y  Parser2.y  Types.hs
static/arith/tests/: Common.hs  Test.hs
static/code/: README.md  cse130-code.cabal  hie.yaml  package.yaml  stack.yaml
static/raw/: MidtermSp15.hs  cow.txt  intro.pl  lec_1_12_21.lc  lec_4_8_2019.lc
templates/: head.html  nav.html
(+40 files in other folders)
